--- a/vishalUtech/templates/pages/menus/footer_archives.html
+++ b/vishalUtech/templates/pages/menus/footer_archives.html
@@ -4,7 +4,7 @@
 {% block blog_months %}
     {% blog_months as months %}
     {% if months %}
-        <h3 class="widget-title">{% trans "Archive" %}</h3>
+        <h3 class="widget-title">{% trans "Archiwum" %}</h3>
         <ul>
         {% for month in months %}
             <li>
