--- a/vishalUtech/templates/blog/post_list.html
+++ b/vishalUtech/templates/blog/post_list.html
@@ -77,7 +77,7 @@
                                         <a href="{{ blog_post.get_absolute_url }}#comments">
                                         <span class="leave-reply">
                                             {% blocktrans  %}
-                                               Leave a comment
+                                               Skomentuj
                                             {% endblocktrans %}
                                         </span>
                                         </a>
