--- a/vishalUtech/templates/includes/search_form.html
+++ b/vishalUtech/templates/includes/search_form.html
@@ -1,8 +1,8 @@
 {% load mezzanine_tags i18n future %}
 <form action="{% url "search" %}" class="navbar-form navbar-right search-form" role="search">
     <label>
-        <span class="screen-reader-text">Search for:</span>
-        <input type="search" class="search-field" placeholder="Search …" value="{{ request.REQUEST.q }}" name="q" title="Search for:" >
+        <span class="screen-reader-text">Szukaj</span>
+        <input type="search" class="search-field" placeholder="wyszukaj …" value="{{ request.REQUEST.q }}" name="q" title="Search for:" >
     </label>
 
 
