--- a/vishalUtech/templates/partials/footer.html
+++ b/vishalUtech/templates/partials/footer.html
@@ -2,13 +2,12 @@
 <footer id="colophon" class="site-footer" role="contentinfo">
     <div id="secondary" class="sidebar-container" role="complementary">
         <div class="widget-area">
-            <aside id="meta-2" class="widget widget_meta"><h3 class="widget-title">Meta</h3>
+            <aside id="meta-2" class="widget widget_meta"><h3 class="widget-title">O nas</h3>
                 <ul>
                     {% include 'pages/menus/pages_as_submenu.html' %}
                 </ul>
             </aside>
-            <aside id="my_popula_posts-3" class="widget widget_my_popula_posts"><h3 class="widget-title">Popular
-                Posts</h3>
+            <aside id="my_popula_posts-3" class="widget widget_my_popula_posts"><h3 class="widget-title">Popularne </h3>
                 <ul>
                     {% include 'pages/menus/footer_top_psots.html' %}
                 </ul>
@@ -16,18 +15,11 @@
             <aside id="archives_footer" class="widget widget_archive">
                 {% include 'pages/menus/footer_archives.html' %}
             </aside>
-            <aside id="categories-2" class="widget widget_categories"><h3
-                    class="widget-title">{% trans "Categories" %}</h3>
-                <ul>
-                    {% include 'pages/menus/footer_categories.html' %}
-                </ul>
-            </aside>
         </div>
         <!-- .widget-area -->
     </div>
     <!-- #secondary -->
     <div class="site-info">
-        <p>Theme by <a href="http://themingstrap.com/" title="Wordpress theme">ThemingStrap</a>. Proudly powered by
-            <a href="http://wordpress.org/" title="Semantic Personal Publishing Platform">WordPress</a></p>
+        <p>made by Mateuszek
     </div>
 </footer>
