share and some data

--- a/vishalUtech/templates/partials/nav_bar.html
+++ b/vishalUtech/templates/partials/nav_bar.html
@@ -1,5 +1,6 @@
 {% load pages_tags %}
 {% load mezzanine_tags %}
+{% load static %}
 <h1>{% with get_categories  as categories %}
     {% for category in categories %}
         <h2>{{ category.title }}!</h2>
@@ -19,26 +20,30 @@
                 {% search_form %}
                 <div id="social">
                     <a class="facebook"
-               onclick="mashFbSharrer(window.location.hostname, '{{ blog_post.content|slice:":128" }}','{{ blog_post.featured_image.url }}',520,350)"
+               onclick="mashFbSharrer(window.location.hostname, 'Tania szafa - Zabawa modą', 'Blog ten poświęcony jest modzie. Chcę razem z wami szukać fajnych ubrań i dołożyć wszelkich starań aby te ubrania znalazły się na wieszkach mojego sklepu w niskich cenach, dostępne dla każdej w Was! To jak? Zaczynamy ?',
+                       window.location.hostname+'{% static 'img/esti_blog.png' %}',520,350)"
                href="javascript:return(0);"><i class="fa fa-facebook"></i></a>
             <a class="twitter"
-               onclick="javascript:mashTwSharrer(window.location.hostname, '{{ blog_post.content|slice:":128"|striptags }}','{{ blog_post.featured_image.url }}', 520, 350)"
+               onclick="javascript:mashTwSharrer(window.location.hostname, 'Tania szafa - Zabawa modą', 'Blog ten poświęcony jest modzie. Chcę razem z wami szukać fajnych ubrań i dołożyć wszelkich starań aby te ubrania znalazły się na wieszkach mojego sklepu w niskich cenach, dostępne dla każdej w Was! To jak? Zaczynamy ?',
+                       window.location.hostname+'{% static 'img/esti_blog.png' %}', 520, 350)"
             "="" href="javascript:return(0)"><i class="fa fa-twitter"></i></a>
 
             <a class="gplus"
-               onclick="javascript:mashGpSharrer(window.location.hostname, '{{ blog_post.content|slice:":128"|striptags }}','{{ blog_post.featured_image.url }}', 520, 350)"
+               onclick="javascript:mashGpSharrer(window.location.hostname, 'Tania szafa - Zabawa modą', 'Blog ten poświęcony jest modzie. Chcę razem z wami szukać fajnych ubrań i dołożyć wszelkich starań aby te ubrania znalazły się na wieszkach mojego sklepu w niskich cenach, dostępne dla każdej w Was! To jak? Zaczynamy ?',
+                       window.location.hostname+'{% static 'img/esti_blog.png' %}', 520, 350)"
             "="" href="javascript:return(0)"><i class="fa fa-google-plus"></i></a>
 
             <a class="linkdeni"
-               onclick="javascript:mashLdSharrer(window.location.hostname, '{{ blog_post.content|slice:":128"|striptags }}','{{ blog_post.featured_image.url }}', 520, 350)"
+               onclick="javascript:mashLdSharrer(window.location.hostname, 'Tania szafa - Zabawa modą', 'Blog ten poświęcony jest modzie. Chcę razem z wami szukać fajnych ubrań i dołożyć wszelkich starań aby te ubrania znalazły się na wieszkach mojego sklepu w niskich cenach, dostępne dla każdej w Was! To jak? Zaczynamy ?',
+                       window.location.hostname+'{% static 'img/esti_blog.png' %}', 520, 350)"
             "="" href="javascript:return(0)"><i class="fa fa-linkedin"></i></a>
 
             <a class="pinterest"
-               onclick="javascript:mashPiSharrer(window.location.hostname, '{{ blog_post.title }}', '{{ blog_post.content|slice:":128"|striptags }}','{{ blog_post.featured_image.url }}', 520, 350)"
+               onclick="javascript:mashPiSharrer(window.location.hostname, 'Tania szafa - Zabawa modą', 'Blog ten poświęcony jest modzie. Chcę razem z wami szukać fajnych ubrań i dołożyć wszelkich starań aby te ubrania znalazły się na wieszkach mojego sklepu w niskich cenach, dostępne dla każdej w Was! To jak? Zaczynamy ?',
+                       window.location.hostname+'{% static 'img/esti_blog.png' %}', 520, 350)"
             "="" href="javascript:return(0)"><i class="fa fa-pinterest "></i></a>
                 </div>
             </div>
-
         </div>
         <nav id="site-navigation" class="navigation" role="navigation">
             <a class="screen-reader-text skip-link" href="#content" title="Skip to content"> Przejdz</a>
@@ -46,39 +51,7 @@
             <div class="menu-mainmenu-container">
                 <ul id="menu-mainmenu" class="nav-menu">
                     {% include 'pages/menus/category_submenu.html' %}
-
-                    {#                        <li id="menu-item-219"#}
-                    {#                            class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-has-children menu-item-219">#}
-                    {#                            <a href="category/lifestyle/index.html">Lifestyle</a>#}
-                    {#                            <ul class="sub-menu">#}
-                    {#                                <li id="menu-item-225"#}
-                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-225"><a#}
-                    {#                                        href="category/arts-entertainment/index.html">Arts &#038; Entertainment</a></li>#}
-                    {#                                <li id="menu-item-224"#}
-                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-224"><a#}
-                    {#                                        href="category/foods-cuisine/index.html">Foods &#038; Cuisine</a></li>#}
-                    {#                                <li id="menu-item-230"#}
-                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-230"><a#}
-                    {#                                        href="category/health-tips-2/index.html">Health Tips</a></li>#}
-                    {#                                <li id="menu-item-218"#}
-                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-218"><a#}
-                    {#                                        href="category/yoga-fitness/index.html">Yoga &#038; Fitness</a></li>#}
-                    {#                                <li id="menu-item-217"#}
-                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-217"><a#}
-                    {#                                        href="category/relationships-family/index.html">Relationships &#038; Family</a>#}
-                    {#                                </li>#}
-                    {#                                <li id="menu-item-223"#}
-                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-223"><a#}
-                    {#                                        href="category/career/index.html">Career</a></li>#}
-                    {#                                <li id="menu-item-215"#}
-                    {#                                    class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-215"><a#}
-                    {#                                        href="category/holidays-celebrations/index.html">Holidays &#038;#}
-                    {#                                    Celebrations</a></li>#}
-                    {#                            </ul>#}
-                    {#                        </li>#}
-                    {#            Include pages menu            #}
                     {% page_menu "pages/menus/pages_as_submenu.html" %}
-                    {#            END Include                     #}
                 </ul>
             </div>
 
