--- a/vishalUtech/templates/partials/tertiary_side_bar.html
+++ b/vishalUtech/templates/partials/tertiary_side_bar.html
@@ -6,15 +6,15 @@
 
     <div class="widget-area">
         <aside id="my_popula_posts-2" class="widget widget_my_popula_posts">
-            Tania szafa <br/>
-            Warszawa cos tam <br/>
-
-            TUTAJ MAPA ?<br/>
-            telefon <br/>
-            email <br/>
-            godziny otwarcia <br/>
-            zdjecie sklepu ?
-            Zapraszamy!
+            <h3>Tania szafa - zabawa modą</h3>
+            Warszawa <br/>
+            ul. Młynarska 37 <br/>
+            <i class="fa  fa-phone"> dawaj numer</i> <br/>
+            <i class="fa fa-envelope"> taniaszafa@gmail.com</i> <br/>
+            <h4>Godziny otwarcia:</h4>
+            Pon - Pią: 9:00 - 17:00 <br/>
+            Sob: 9:00 - 14:00
+            <h4>Serdecznie Zapraszamy!</h4>
 
         </aside>
     </div>
