--- a/vishalUtech/templates/partials/footer.html
+++ b/vishalUtech/templates/partials/footer.html
@@ -2,9 +2,12 @@
 <footer id="colophon" class="site-footer" role="contentinfo">
     <div id="secondary" class="sidebar-container" role="complementary">
         <div class="widget-area">
-            <aside id="meta-2" class="widget widget_meta"><h3 class="widget-title">O nas</h3>
+            <aside id="meta-2" class="widget widget_meta"><h3 class="widget-title">Tania szafa - zabawa modą</h3>
                 <ul>
-                    {% include 'pages/menus/pages_as_submenu.html' %}
+                    <li>ul. Młynarska 37 Warszawa</li>
+                    <li><i class="fa  fa-phone"> dawaj numer</i></li>
+                    <li><i class="fa fa-envelope"> taniaszafa@gmail.com</i></li>
+
                 </ul>
             </aside>
             <aside id="my_popula_posts-3" class="widget widget_my_popula_posts"><h3 class="widget-title">Popularne </h3>
