--- a/vishalUtech/templates/partials/footer.html
+++ b/vishalUtech/templates/partials/footer.html
@@ -5,8 +5,8 @@
             <aside id="meta-2" class="widget widget_meta"><h3 class="widget-title">Tania szafa - zabawa modą</h3>
                 <ul>
                     <li>ul. Młynarska 37 Warszawa</li>
-                    <li><i class="fa  fa-phone"> dawaj numer</i></li>
-                    <li><i class="fa fa-envelope"> taniaszafa@gmail.com</i></li>
+                    <li><i class="fa  fa-phone"> 739 042 570</i></li>
+                    <li><i class="fa fa-envelope"> zabawamoda@gmail.com</i></li>
 
                 </ul>
             </aside>
@@ -26,3 +26,9 @@
         <p>made by Mateuszek
     </div>
 </footer>
+
+
+
+
+
+
