--- a/vishalUtech/templates/partials/tertiary_side_bar.html
+++ b/vishalUtech/templates/partials/tertiary_side_bar.html
@@ -9,8 +9,8 @@
             <h3>Tania szafa - zabawa modą</h3>
             Warszawa <br/>
             ul. Młynarska 37 <br/>
-            <i class="fa  fa-phone"> dawaj numer</i> <br/>
-            <i class="fa fa-envelope"> taniaszafa@gmail.com</i> <br/>
+            <i class="fa  fa-phone"> 739 042 570</i> <br/>
+            <i class="fa fa-envelope"> zabawamoda@gmail.com</i> <br/>
             <h4>Godziny otwarcia:</h4>
             Pon - Pią: 9:00 - 17:00 <br/>
             Sob: 9:00 - 14:00
