--- a/vishalUtech/templates/generic/includes/comments_login_modal.html
+++ b/vishalUtech/templates/generic/includes/comments_login_modal.html
@@ -7,13 +7,13 @@
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">x</button>
                 <h1>Zaloguj się</h1>
                 <p>
-                    Aby w pełni korzystać z serwisu.
+                    za pomocą facebooka aby skomentować artukuł.
                 </p>
                 <div id="social-icons">
                     <a href='{% provider_login_url "facebook" method="oauth2" next=request.get_full_path %}#comment'><i class="fa fa-facebook-square"></i></a></li>
-                    <a href='{% provider_login_url "twitter" method="oauth2" next=request.get_full_path %#comment}'><i class="fa fa-twitter"></i></a></li>
-                    <a href='{% provider_login_url "google" method="oauth2" next=request.get_full_path %}#comment'><i class="fa fa-google-plus"></i></a></li>
-                    <a href='{% provider_login_url "linkedin" method="oauth2" next=request.get_full_path %}#comment'><i class="fa fa-linkedin-square"></i></a></li>
+{#                    <a href='{% provider_login_url "twitter" method="oauth2" next=request.get_full_path %#comment}'><i class="fa fa-twitter"></i></a></li>#}
+{#                    <a href='{% provider_login_url "google" method="oauth2" next=request.get_full_path %}#comment'><i class="fa fa-google-plus"></i></a></li>#}
+{#                    <a href='{% provider_login_url "linkedin" method="oauth2" next=request.get_full_path %}#comment'><i class="fa fa-linkedin-square"></i></a></li>#}
                 </div>
             </div>
 
@@ -45,7 +45,7 @@ login on click textarea, prevents to sending post without login
     <script>
         $(document).on('ready', function(){
 
-            $(body).on('click', '.nicEdit-main, .btn-primary.btn_comment_post', function(e){
+            $('body').on('click', '.nicEdit-main, .btn-primary.btn_comment_post', function(e){
                 e.preventDefault();
                $('#comment_login').modal('show');
             });
