--- a/vishalUtech/templates/partials/tertiary_side_bar.html
+++ b/vishalUtech/templates/partials/tertiary_side_bar.html
@@ -7,14 +7,14 @@
     <div class="widget-area">
         <aside id="my_popula_posts-2" class="widget widget_my_popula_posts">
             <h3>Tania szafa - zabawa modą</h3>
-            Warszawa <br/>
-            ul. Młynarska 37 <br/>
-            <i class="fa  fa-phone"> 739 042 570</i> <br/>
-            <i class="fa fa-envelope"> zabawamoda@gmail.com</i> <br/>
-            <h4>Godziny otwarcia:</h4>
-            Pon - Pią: 9:00 - 17:00 <br/>
-            Sob: 9:00 - 14:00
-            <h4>Serdecznie Zapraszamy!</h4>
+{#            Warszawa <br/>#}
+{#            ul. Młynarska 37 <br/>#}
+            <i class="fa  fa-phone"> 731 892 996</i> <br/>
+            <i class="fa fa-envelope"> zabawamodapoczta@gmail.com</i> <br/>
+{#            <h4>Godziny otwarcia:</h4>#}
+{#            Pon - Pią: 9:00 - 17:00 <br/>#}
+{#            Sob: 9:00 - 14:00#}
+{#            <h4>Serdecznie Zapraszamy!</h4>#}
 
         </aside>
     </div>
