--- a/vishalUtech/templates/partials/footer.html
+++ b/vishalUtech/templates/partials/footer.html
@@ -4,9 +4,9 @@
         <div class="widget-area">
             <aside id="meta-2" class="widget widget_meta"><h3 class="widget-title">Tania szafa - zabawa modą</h3>
                 <ul>
-                    <li>ul. Młynarska 37 Warszawa</li>
-                    <li><i class="fa  fa-phone"> 739 042 570</i></li>
-                    <li><i class="fa fa-envelope"> zabawamoda@gmail.com</i></li>
+{#                    <li>ul. Młynarska 37 Warszawa</li>#}
+                    <li><i class="fa  fa-phone"> 731 892 996</i></li>
+                    <li><i class="fa fa-envelope"> zabawamodapoczta@gmail.com</i></li>
 
                 </ul>
             </aside>
