--- a/vishalUtech/templates/partials/footer.html
+++ b/vishalUtech/templates/partials/footer.html
@@ -5,7 +5,7 @@
             <aside id="meta-2" class="widget widget_meta"><h3 class="widget-title">Tania szafa - zabawa modą</h3>
                 <ul>
 {#                    <li>ul. Młynarska 37 Warszawa</li>#}
-                    <li><i class="fa  fa-phone"> 731 892 996</i></li>
+{#                    <li><i class="fa  fa-phone"> 731 892 996</i></li>#}
                     <li><i class="fa fa-envelope"> zabawamodapoczta@gmail.com</i></li>
 
                 </ul>
