--- a/vishalUtech/templates/partials/tertiary_side_bar.html
+++ b/vishalUtech/templates/partials/tertiary_side_bar.html
@@ -9,7 +9,7 @@
             <h3>Tania szafa - zabawa modą</h3>
 {#            Warszawa <br/>#}
 {#            ul. Młynarska 37 <br/>#}
-            <i class="fa  fa-phone"> 731 892 996</i> <br/>
+{#            <i class="fa  fa-phone"> 731 892 996</i> <br/>#}
             <i class="fa fa-envelope"> zabawamodapoczta@gmail.com</i> <br/>
 {#            <h4>Godziny otwarcia:</h4>#}
 {#            Pon - Pią: 9:00 - 17:00 <br/>#}
