--- a/vishalUtech/templates/partials/tertiary_side_bar.html
+++ b/vishalUtech/templates/partials/tertiary_side_bar.html
@@ -11,10 +11,10 @@
 {#            ul. Młynarska 37 <br/>#}
 {#            <i class="fa  fa-phone"> 731 892 996</i> <br/>#}
             <i class="fa fa-envelope"> zabawamodapoczta@gmail.com</i> <br/>
-{#            <h4>Godziny otwarcia:</h4>#}
-{#            Pon - Pią: 9:00 - 17:00 <br/>#}
-{#            Sob: 9:00 - 14:00#}
-{#            <h4>Serdecznie Zapraszamy!</h4>#}
+            <h4>Godziny otwarcia:</h4>
+            Pon - Sob: 9:00 - 17:00 <br/>
+            Sob: 9:00 - 14:00
+            <h4>Serdecznie Zapraszamy!</h4>
 
         </aside>
     </div>
